<resources>
    <string name="app_name">Emoji Finder</string>
    <string name="title_login">Login Module</string>
    <string name="login">Login</string>
    <string name="login_with_vk">Login with VK</string>
    <string name="create_account">Create Account</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="or">OR</string>
    <string name="language">Language</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="passwords_error">Passwords are different</string>
    <string name="email_error">Email is incorrect</string>
    <string name="login_error">Login should be unique</string>
    <string name="registration_error">Some errors occurred</string>
    <string name="registration_successful">Registration Complete</string>
    <string name="email_is_not_unique">This email already registered</string>
    <string name="login_successful">Log In Successful</string>
    <string name="login_failure">Log In failure</string>
    <string name="some_fields_empty">Fill all fields !</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="okey">Okey</string>
    <string name="loading">loading</string>
    <string name="restore_password">Restore Password</string>
    <string name="start_arcade_game">Arcade\nGame</string>
    <string name="start_category_game">Campaign</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="animals">Animals</string>
    <string name="score">Score</string>
    <string name="time">Time:</string>
    <string name="level">Level:</string>
    <string name="start_the_game">Start the game</string>
    <string name="hint">Hint</string>
    <string name="game_hint">Purpose of the game: to find all emojis from the lower menu by comparing with the selected upper emoji in</string>
    <string name="start_game">Start game</string>
    <string name="exit_game_text">If you exit now, you’ll lose all progress</string>
    <string name="finish">Finish</string>
    <string name="back_to_game">Resume</string>
    <string name="try_again">Try again</string>
    <string name="next_level">Next level</string>
    <string name="empty_levels">There is no statistics for your levels, but now it\'s perfect time to change it!</string>
    <string name="some_error_ocure">Some error occur</string>
    <string name="update">Update</string>
    <string name="current_password">Current password</string>
    <string name="check_password">Check password</string>
    <string name="if_you_want_to_change_password_or_email_write_current_password">If you want to change password or email write current password</string>
    <string name="reset">Reset</string>
    <string name="generate">Generate</string>
    <string name="shop">Shop</string>
    <string name="filter">Filter</string>
    <string name="there_is_no_emojis">There is no emojis</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_enough_emos">Not enough emos</string>
    <string name="game_hint_prefs">game hint</string>
    <string name="help">Help</string>
    <string name="open_chest">Chests</string>
    <string name="roll">Roll</string>
    <string name="values">Values</string>
    <string name="emoji_box">EMOJI BOX</string>
    <string name="open">Open</string>
    <string name="take">Take</string>
    <string name="sell">Sell</string>
    <string name="buy_chest_for_200_emos">200 Emos</string>
    <string name="emoji_finder_levels">Emoji Finder Levels</string>
    <string name="return_to_levels">Return to levels</string>
    <string name="retry">Retry</string>
    <string name="chose_country">Chose country</string>
    <string name="save">Save</string>
    <string name="victory">Victory</string>
    <string name="mistakes">Mistakes:</string>
    <string name="mishok_games">Mishok Games</string>
    <string name="exit">Exit</string>
    <string name="start">Start</string>
    <string name="game_level">Level: </string>
    <string name="save_info">Save</string>
    <string name="account">Account</string>
    <string name="game">Game</string>
    <string name="statistics">Statistics</string>
    <string name="other">Other</string>
    <string name="how_to_delete_account">How to delete account ?</string>
    <string name="help_forgot_password">I need to log in, but I can’t remember the password. Could you help me ?</string>
    <string name="bad_nick_name">Why my nick name contains 👶</string>
    <string name="how_to_play">How to play ?</string>
    <string name="i_passed_the_level">I passed the level, but the statistics were not recorded, what should I do?</string>
    <string name="how_to_disable_adds">How to disable adds ?</string>
    <string name="how_to_disable_adds_answer">To disable ads, you need to buy a VIP account for 2$</string>
    <string name="i_passed_the_level_answer">If you have completed a level and you have not recorded statistics in your account, then make sure that you have completed the level before the time runs out.\n\nOtherwise, you will have to go through it again. If none of the answers help, then write to the mail.</string>
    <string name="how_to_play_answer">If you play a company, then first you wait until the level loads, then click on the "Start" button. After the timer ends, you must match the emojis from the bottom menu to the top one selected.\n\nYou will win if you find all emojis before time runs out and get 20% of the bill. At the very end, you will see the time, score, number of errors and level number.\n\nYou will lose if time runs out and statistics are not recorded.</string>
    <string name="no_answer">There is no answer</string>
    <string name="bad_nick_name_answer">If you see emojis in your name, it means that part of the name was considered unacceptable and replaced with emoji.  Please do not use abusive or inappropriate words in your username, as this is contrary to our code of conduct and may lead to the deletion of your account.</string>
    <string name="help_forgot_password_answer">If your account is tied to an email address, you can use this email to reset your password.\n\nIf your account is not tied to email, please contact our support team. To expedite the consideration of your request, provide the following information: your avatar, the number of chests, the number of emoji, and the number.\n\nPlease note that the email address you provide cannot be linked to another account in the game Emoji Search.</string>
    <string name="how_to_delete_account_answer">To delete an account, launch the application and go to “Settings” and click “Delete data”.\n\nRead the warning carefully, as clicking the “Confirm” button will delete all your data. After deletion, it will be impossible to recover data.</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="attach">Attach</string>
    <string name="contact">Contact us</string>
    <string name="answer">Answer</string>
    <string name="fill_all_fields">Fill all fields !</string>
    <string name="music">Music</string>
    <string name="notifications">Notifications</string>
    <string name="win_game">Win</string>
    <string name="game_lost">Lost</string>
    <string name="what_is_emos">What is Emos in the account ?</string>
    <string name="what_is_emos_answer">Emos is game value.\n\nYou can buy emojis from the shop with this value</string>
    <string name="how_to_combine">How to combine Emojis in the shop?</string>
    <string name="how_to_combine_answer">To combine different emojis into one, you first need to earn Emos by playing in the company. When you accumulate enough currency, you need to buy a classic yellow emoji in the store, and then buy any color for it.\n\nWhen you have these emojis, just click on a cell to make it active, then click on your emoji, so do with color and another classic emoji.\n\nThere are a lot of emoji combinations.\n\nImportant!\n\nEmoji order and color is important Do not confuse color with a square</string>
    <string name="delete_account">Delete account</string>
    <string name="your_emoji">Your emoji</string>
    <string name="leave_account">Do you really want to leave?</string>
    <string name="delete_account_message">Are you sure you want to delete the account?</string>
    <string name="top">Top</string>
    <string name="suggest_level">Suggest level</string>
    <string name="create">Create</string>
    <string name="constructor">Constructor</string>
    <string name="save_level">Save level</string>
    <string name="reset_level">Reset level</string>
    <string name="you_cannot_restore_this_level_map">You cannot restore this level map</string>
    <string name="warning">Warning</string>
    <string name="if_you_do_not_want_to_lose">If you do not want to lose this level, then you need to save it.</string>
    <string name="sent_level">Sent level</string>
    <string name="now_you_are_sending_your_level_to_the_server_in_the_near_future_the_manager_will_either_accept_it_or_reject_it">Now you are sending your level to the server, in the near future, the manager will either accept it or reject it.</string>
    <string name="sent">Sent</string>
    <string name="name_your_level">Name your level</string>
    <string name="set_time_in_seconds">Set time in seconds</string>
    <string name="level_name_should_be_unique">Name should be unique</string>
    <string name="level_name_is_empty">Name your level</string>
    <string name="set_level_time">Set level time</string>
    <string name="status">Status</string>
    <string name="delete_level">Delete level</string>
    <string name="delete">Delete</string>
    <string name="do_you_sure_you_want_to_delete_this_level">Do you sure you want to delete this level ?</string>
    <string name="sec">sec</string>
    <string name="collapsed">Collapsed</string>
    <string name="expanded">Expanded</string>
    <string name="find_all_emojis">Find All Emojis !</string>
    <string name="emos">Emos:</string>
    <string name="private_policy">Private policy</string>
    <string name="top_top_50">TOP - Top 50</string>
    <string name="invite">Invite</string>
    <string name="rating">Rating</string>
    <string name="emojis">Emojis</string>
    <string name="watch_add_1_chest">Watch add + 1 chest</string>
    <string name="vip_golder_pass">VIP GOLDER PASS</string>
    <string name="starter_pack">Starter Pack</string>
    <string name="huge_pack">Huge Pack</string>
    <string name="medium_pack">Medium Pack</string>
    <string name="emoji_shop">Emoji shop</string>
    <string name="game_end">Game End!</string>
    <string name="levels">Levels</string>
    <string name="claim">CLAIM 2x</string>
    <string name="claim_simple">claim</string>
    <string name="daily_title">Emojis can\'t wait for you !</string>
    <string name="daily_description">"You have free gift in the game 🎁 🍉"</string>
    <string name="arcade_game_hint">Find as many emojis as possible in 60 seconds by clicking on them</string>
    <string name="emoji">Emoji</string>
    <string name="finder">FINDER</string>
    <string name="menu">Menu</string>
    <string name="campaign">Campaign</string>
    <string name="get_free_chest">GET FREE 🎟️</string>
    <string name="_249_9">249.9 Р</string>
    <string name="_199_9">199.9 Р</string>
    <string name="starter_box_count">5</string>
    <string name="starter_emos_count">1000</string>
    <string name="medium_emos_count">2000</string>
    <string name="medium_box_count">10</string>
    <string name="payment_canceled">Payment canceled</string>
</resources>