<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:background="@drawable/generator_emoji_style">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/emoji_shop_top_place_style">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sent_level"
                    android:textSize="22sp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/background_color"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_you_are_sending_your_level_to_the_server_in_the_near_future_the_manager_will_either_accept_it_or_reject_it"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sent_level_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/sent"
                    app:backgroundTint="@color/green_color"
                    android:layout_weight="1"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_sent_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:rippleColor="@color/main_ripple_button_color"
                    android:textColor="@color/main_ripple_button_color"
                    android:text="@string/cancel"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeWidth="3dp"
                    android:layout_weight="1"/>

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>
</layout>
