<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:background="@drawable/generator_emoji_style">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/emoji_shop_top_place_style">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warning"
                    android:fontFamily="@font/ru_eng_sriracha"
                    android:textSize="22sp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/background_color"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_you_do_not_want_to_lose"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/ru_eng_sriracha"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/first_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_level_dialog_leave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/save_info"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"
                    android:fontFamily="@font/ru_eng_sriracha"
                    app:backgroundTint="@color/textOrangeColor"
                    android:layout_weight="1"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/leave_level_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:fontFamily="@font/ru_eng_sriracha"
                    android:layout_marginStart="5dp"
                    app:cornerRadius="10dp"
                    app:backgroundTint="@color/red_color"
                    android:text="@string/exit"
                    app:strokeWidth="3dp"
                    android:layout_weight="1"/>

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>
</layout>
