<?xml version="1.0" encoding="utf-8"?>


<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/generator_emoji_style">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/emoji_shop_top_place_style">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit"
                    android:fontFamily="@font/ru_eng_sriracha"
                    android:textSize="22sp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/background_color"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leave_account"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/first_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/log_out_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:fontFamily="@font/ru_eng_sriracha"
                    app:backgroundTint="@color/textOrangeColor"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    app:cornerRadius="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_log_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_weight="1"
                    android:fontFamily="@font/ru_eng_sriracha"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"
                    android:textColor="@color/main_ripple_button_color"
                    android:layout_marginStart="5dp"
                    app:strokeWidth="3dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

