<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp"
    android:layout_gravity="center"
    android:elevation="5dp"
    app:strokeColor="@color/buttonBlueColor"
    app:strokeWidth="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/emoji_shop_top_place_style"
            android:text="@string/hint"
            android:fontFamily="@font/ru_eng_sriracha"
            android:textAlignment="center"
            android:textColor="@color/background_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/hintText"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ru_eng_sriracha"
            android:text="@string/game_hint"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/first_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_game_btn"
            android:text="@string/start_game"
            app:cornerRadius="10dp"
            android:fontFamily="@font/ru_eng_sriracha"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:insetBottom="20dp"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            app:backgroundTint="@color/textOrangeColor"
            android:textColor="@color/background_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>