<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/generator_emoji_style">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/emoji_shop_top_place_style">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    android:textSize="22sp"
                    android:fontFamily="@font/ru_eng_sriracha"
                    android:layout_centerInParent="true"
                    android:textColor="@color/background_color"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:text="@string/delete_account_message"
                android:layout_gravity="center"
                android:fontFamily="@font/ru_eng_sriracha"
                android:includeFontPadding="false"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/first_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_account_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:fontFamily="@font/ru_eng_sriracha"
                    android:layout_marginEnd="5dp"
                    app:cornerRadius="10dp"
                    app:backgroundTint="@color/textOrangeColor"
                    android:layout_weight="1"
                    android:textAllCaps="false"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    app:cornerRadius="10dp"
                    android:fontFamily="@font/ru_eng_sriracha"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:rippleColor="@color/main_ripple_button_color"
                    android:textColor="@color/main_ripple_button_color"
                    app:strokeWidth="3dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</layout>
